2017-05-14 Hanna Knutsson <hanna_k@fmgirl.com>

	* Use gio when available instead of deprecated gvfs-copy
	* Save default preferences when running qalc the first time even if in non-interactive mode
	* Fix ask if fetch exchange rates first qalc run

2017-05-05 Hanna Knutsson <hanna_k@fmgirl.com>

	* unit/unit/unit = (unit/unit)/unit with adaptive parsing
	* Fix "1 W Ohm /K/K"

2017-03-31 Hanna Knutsson <hanna_k@fmgirl.com>

	* Build fixes (Check for libtoolize instead of libtool in autogen.sh; Include Doxyfile in dist files)

2017-03-19 Hanna Knutsson <hanna_k@fmgirl.com>

	* Merge Windows support fork (chengsun)

2017-02-20 Hanna Knutsson <hanna_k@fmgirl.com>

	* Use top of the stack twice (instead of zero) for operations (except subtract) when only one value is available

2017-02-18 Hanna Knutsson <hanna_k@fmgirl.com>

	* "Pop", "copy", "rotate", "move" commands for RPN stack manipulation in qalc
	* Enable both (or one of) RPN stack and syntax with the "rpn" command in qalc

2017-02-17 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix functions with RPN syntax
	* Swap command for RPN stack manipulation in qalc

2017-02-16 Hanna Knutsson <hanna_k@fmgirl.com>

	* Do not always reparse expression when parse options have changed
	* Introduce message categories and stages
	* Hide parsing stage messages when only recalculating or angle unit has changed in qalc	

2017-02-15 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix transform last arguments to vector, when only one last argument (fixes function("1+\x"; 1))

2017-02-14 Hanna Knutsson <hanna_k@fmgirl.com>

	* New commands for creation of simple functions and variables (with specified expression) in qalc
	* Do not allow empty names

2017-02-10 Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix and increase the size of the list of prime numbers
	* Handle recursive variables (give error and return undefined)
	* Replace ans with ans2 in ans (and ans2 in ans2...) in qalc

2017-02-08 Hanna Knutsson <hanna_k@fmgirl.com>
